# stellar-tui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: codeql.yml  sbom.yml
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/core/: forms.rs  mod.rs  state.rs  types.rs
src/app/features/: forms.rs  mod.rs  networks.rs  response.rs  runtime.rs
src/app/features/events/: focus.rs  keyboard.rs  mod.rs  modal.rs  mouse.rs  network.rs  search.rs
src/app/methods/: helpers.rs  mod.rs  paging.rs  registry.rs  types.rs  validation.rs
src/app/methods/method/: get_events.rs  get_fee_stats.rs  get_health.rs  get_latest_ledger.rs  get_ledger_entries.rs  get_ledgers.rs  get_network.rs  get_transaction.rs  get_transactions.rs  get_version_info.rs  mod.rs  send_transaction.rs  simulate_transaction.rs
src/rpc/: mod.rs  types.rs
src/settings/: mod.rs
src/ui/: caret.rs  frame.rs  layout.rs  mod.rs  palette.rs  styles.rs
src/ui/components/: form.rs  mod.rs  search.rs
src/ui/modals/: about.rs  info.rs  layout.rs  mod.rs  settings.rs
src/ui/panes/: footer.rs  header.rs  methods.rs  mod.rs  request.rs  response.rs
tests/: app_navigation.rs  layout_render.rs  network_settings.rs  response_paging.rs  response_search.rs  rpc_methods_smoke.rs  runtime_lifecycle.rs
