[package]
name = "stellar-tui"
version = "0.1.0"
authors = ["Padparadscho <contact@padparadscho.com>"]
description = "A terminal user interface for exploring and executing Stellar RPC methods."
license = "MIT"
repository = "https://github.com/padparadscho/stellar-tui"
homepage = "https://github.com/padparadscho/stellar-tui#readme"
edition = "2021"
rust-version = "1.93.0"
readme = "README.md"
keywords = ["blockchain", "rpc", "soroban", "stellar", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
arboard = "3.4.1"
base64 = "0.22.1"
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
